[gd_scene load_steps=2 format=2]

[ext_resource path="res://tela incial.gd" type="Script" id=1]

[node name="tela incial" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 602.0

[node name="Button3" type="Button" parent="."]
margin_left = 711.0
margin_top = 350.0
margin_right = 823.0
margin_bottom = 377.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 64.4231, 2.5862 )
text = "Botão 3"
clip_text = true
icon_align = 1

[node name="Button" type="Button" parent="."]
margin_left = 588.0
margin_top = 266.0
margin_right = 694.0
margin_bottom = 296.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 64.4231, 2.5862 )
text = "botão 1"
icon_align = 1

[node name="Button2" type="Button" parent="."]
margin_left = 827.0
margin_top = 264.0
margin_right = 937.0
margin_bottom = 294.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 64.4231, 2.5862 )
text = "Botão 2"
icon_align = 1

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 570.0
margin_top = 136.0
margin_right = 895.0
margin_bottom = 239.0
align = 1

[node name="explicação" type="Label" parent="."]
margin_left = 569.0
margin_top = 44.0
margin_right = 769.0
margin_bottom = 80.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Insira um nome e um número:
ex.:Amanda 123"
align = 1
valign = 1

[node name="tutorial" type="Label" parent="."]
margin_left = 75.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 94.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "isijwidjjsfDJgflmbglfmb"

[node name="Label" type="Label" parent="."]
margin_left = 658.0
margin_top = 421.0
margin_right = 746.0
margin_bottom = 447.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Label 1"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 672.0
margin_top = 488.0
margin_right = 747.0
margin_bottom = 513.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Label 2"
align = 1
valign = 1

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
